# pytorch-kernel-examples

./: .gitignore  README.md  environment.yml
sandbox/cuda_kernels/add/: vector_add.cu
sandbox/cuda_kernels/mmult/: Makefile  benchmark.cu  benchmark_mkl.cpp  karpathy_common.h  karpathy_mmult.cu  mmult.cu  mmult.hpp  test.cu
sandbox/cuda_kernels/test/: test.cu
sandbox/custom_device/: README.md  benchmark.cpp  benchmark.py  custom_backend.cpp
sandbox/custom_ops/mmult/: README.md  example_multithreading.py
sandbox/custom_ops/mmult/csrc/: mmult.cpp
sandbox/integration_examples/v1_3/: tester.py
sandbox/integration_examples/v1_4/: README.md
sandbox/integration_examples/v1_5/: README.md
sandbox/integration_examples/v2_0/: CMakeLists.txt  README.md  custom_backend.cpp
sandbox/integration_examples/v2_0_tester/: CMakeLists.txt  README.md  custom_backend.cpp
src/custom_device/: CMakeLists.txt  benchmark.py  custom_backend.cpp  custom_backend.hpp
src/custom_ops/mmult/: CMakeLists.txt  benchmark.py  example_multithreading.py  mmult.cpp
src/custom_ops/mmult/csrc/: CMakeLists.txt  mmult.cpp
src/custom_ops/mmult/vgpu/: __init__.py  ops.py  utils.py
src/integration_examples/v1_1/: CMakeLists.txt
src/integration_examples/v1_2/: README.md
src/integration_examples/v1_3/: README.md
src/integration_examples/v1_4/: custom_mmult_op.cpp
src/integration_examples/v2_0/: CMakeLists.txt  README.md  custom_backend.cpp  custom_mmult_op.cpp  tester.py  vgpu.py
src/integration_examples/v2_0_tester/: tester.py
src/v1_0/: README.md
src/v1_1/: README.md  tester.py
src/v1_2/: README.md  custom_mmult_op.cpp  tester.py
src/v1_3/: README.md
src/v1_4/: README.md  custom_mmult_op.cpp  setup.py  tester.py
src/v1_5/: custom_mmult_op.cpp  tester.py
vgpu/: benchmark.py  example.py
vgpu/csrc/: CMakeLists.txt  benchmark.cpp
vgpu/csrc/backend/: allocator.cpp  fallback.cpp  tensor.cpp
vgpu/csrc/ops/: mmult.cpp  mmult.hpp
vgpu/csrc/utils/: multithreading.cpp  multithreading.hpp
vgpu/vgpu/: __init__.py  ops.py  utils.py
